--- a/configs/sim/gscreen/aries/control_panel.glade
+++ b/configs/sim/gscreen/aries/control_panel.glade
@@ -179,7 +179,7 @@ user built panel like this one.</property>
                       <object class="GtkTable" id="table1">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="n_rows">3</property>
+                        <property name="n_rows">4</property>
                         <property name="n_columns">4</property>
                         <property name="homogeneous">True</property>
                         <child>
@@ -292,7 +292,7 @@ user built panel like this one.</property>
                           </packing>
                         </child>
                         <child>
-                          <object class="HAL_LightButton" id="select_x1">
+                          <object class="HAL_LightButton" id="select_y">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="button_halio_pin">False</property>
@@ -376,6 +376,34 @@ user built panel like this one.</property>
                             <property name="right_attach">3</property>
                             <property name="top_attach">2</property>
                             <property name="bottom_attach">3</property>
+                            <property name="x_options">GTK_FILL</property>
+                            <property name="y_options">GTK_FILL</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <placeholder/>
+                        </child>
+                        <child>
+                          <placeholder/>
+                        </child>
+                        <child>
+                          <object class="HAL_LightButton" id="select_mpg">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="button_halio_pin">False</property>
+                            <property name="button_text" translatable="yes">MPG</property>
+                            <property name="font_bold">True</property>
+                            <property name="font_off_color">#000000000000</property>
+                            <property name="font_on_color">#000000000000</property>
+                            <property name="font_size">12</property>
+                            <property name="is_momentary">True</property>
+                            <property name="light_off_color">#bebebebebebe</property>
+                            <property name="light_on_color">#1340e2b3f885</property>
+                          </object>
+                          <packing>
+                            <property name="right_attach">2</property>
+                            <property name="top_attach">3</property>
+                            <property name="bottom_attach">4</property>
                             <property name="x_options">GTK_FILL</property>
                             <property name="y_options">GTK_FILL</property>
                           </packing>
